--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.1",
     "axios": "^1.7.9",
     "expo": "~52.0.35",
     "expo-constants": "~17.0.6",
