--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-maps": "1.18.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0"
   },
