--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "axios": "^1.7.9",
     "expo": "~52.0.35",
     "expo-constants": "~17.0.6",
+    "expo-image-picker": "~16.0.6",
     "expo-linking": "~7.0.5",
+    "expo-location": "~18.0.7",
     "expo-router": "~4.0.17",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
